# dynamodb_demo

./: CMakeLists.txt  main.cpp
centos7/: CMakeLists.txt  main.cpp
centos8/: main.cpp
rpms/centos8/: aws-sdk-cpp-libs-1.9.10-1.x86_64.rpm
