cmake_minimum_required(VERSION 3.17)
project(dynamodbtest)
set(CMAKE_CXX_STANDARD 14)
find_package(GTest REQUIRED)
find_package(Threads REQUIRED)
find_package(AWSSDK CONFIG COMPONENTS core dynamodb REQUIRED)
include_directories(${AWSSDK_INCLUDE_DIRS})
include_directories(${GTEST_INCLUDE_DIRS})
add_executable(dynamodbtest main.cpp)
target_link_libraries(dynamodbtest ${AWSSDK_LIBRARIES} ${GTEST_BOTH_LIBRARIES})
add_test(Test dynamodbtest)
enable_testing()